scripts/nullaway/original/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8.txt
../original/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/polynomial/YTerms.java:18: error: [NullAway] initializer method does not guarantee @NonNull field coefficients (line 12) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public YTerms() {
	       ^
    (see http://t.uber.com/nullaway )
../original/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/polynomial/YTerms.java:30: error: [NullAway] initializer method does not guarantee @NonNull field coefficients (line 12) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public YTerms(YTerms src) {
	       ^
    (see http://t.uber.com/nullaway )
../original/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/polynomial/YTerms.java:23: error: [NullAway] assigning @Nullable expression to @NonNull field
		coefficients = null;
		             ^
    (see http://t.uber.com/nullaway )
../original/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/polynomial/YTerms.java:333: error: [NullAway] assigning @Nullable expression to @NonNull field
			coefficients = null;
			             ^
    (see http://t.uber.com/nullaway )
../original/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/util/Cache.java:63: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../original/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/graph/Graph.java:17: error: [NullAway] initializer method does not guarantee @NonNull field label (line 15) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Graph(int i) {
	       ^
    (see http://t.uber.com/nullaway )
../original/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/graph/Graph.java:23: error: [NullAway] initializer method does not guarantee @NonNull field label (line 15) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Graph(AdjacencyMatrix g) {
	       ^
    (see http://t.uber.com/nullaway )
../original/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/graph/Graph.java:39: error: [NullAway] assigning @Nullable expression to @NonNull field
		label = null;
		      ^
    (see http://t.uber.com/nullaway )
../original/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/graph/Graph.java:49: error: [NullAway] assigning @Nullable expression to @NonNull field
		label = null;
		      ^
    (see http://t.uber.com/nullaway )
../original/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/graph/Graph.java:70: error: [NullAway] assigning @Nullable expression to @NonNull field
		label = null;
		      ^
    (see http://t.uber.com/nullaway )
../original/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/graph/Graph.java:77: error: [NullAway] assigning @Nullable expression to @NonNull field
		label = null;
		      ^
    (see http://t.uber.com/nullaway )
../original/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/graph/Graph.java:94: error: [NullAway] assigning @Nullable expression to @NonNull field
		label = null;
		      ^
    (see http://t.uber.com/nullaway )
../original/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/graph/Graph.java:244: error: [NullAway] assigning @Nullable expression to @NonNull field
		label = null;
		      ^
    (see http://t.uber.com/nullaway )
../original/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/graph/AdjacencyMatrix.java:495: error: [NullAway] initializer method does not guarantee @NonNull field next (line 487) is initialized along all control-flow paths (remember to check for exceptions or early returns).
		public EdgeIterator(int[] edges, int vertex) {
		       ^
    (see http://t.uber.com/nullaway )
../original/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/graph/AdjacencyMatrix.java:511: error: [NullAway] assigning @Nullable expression to @NonNull field
					next = null;
					     ^
    (see http://t.uber.com/nullaway )
../original/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/util/Isomorphism.java:40: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
			resultTriple = searchTree(g, partition, null);
			                                        ^
    (see http://t.uber.com/nullaway )
../original/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/util/Isomorphism.java:360: error: [NullAway] unboxing of a @Nullable value
					g2.addEdge(shuffle.get(e.first()), shuffle.get(e.second()));
					                      ^
    (see http://t.uber.com/nullaway )
../original/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/util/Isomorphism.java:360: error: [NullAway] unboxing of a @Nullable value
					g2.addEdge(shuffle.get(e.first()), shuffle.get(e.second()));
					                                              ^
    (see http://t.uber.com/nullaway )
../original/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/util/Isomorphism.java:360: error: [NullAway] passing @Nullable parameter 'shuffle.get(e.first())' where @NonNull is required
					g2.addEdge(shuffle.get(e.first()), shuffle.get(e.second()));
					                      ^
    (see http://t.uber.com/nullaway )
../original/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/util/Isomorphism.java:360: error: [NullAway] passing @Nullable parameter 'shuffle.get(e.second())' where @NonNull is required
					g2.addEdge(shuffle.get(e.first()), shuffle.get(e.second()));
					                                              ^
    (see http://t.uber.com/nullaway )
../original/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/graph/AdjacencyList.java:175: error: [NullAway] unboxing of a @Nullable value
				tos.put(to, i + c);
				            ^
    (see http://t.uber.com/nullaway )
../original/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/graph/AdjacencyList.java:205: error: [NullAway] unboxing of a @Nullable value
					edges.get(to).put(from, i - c);
					                        ^
    (see http://t.uber.com/nullaway )
../original/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/graph/Util.java:33: error: [NullAway] passing @Nullable parameter 'g2_partitions' where @NonNull is required
		partition(w,g2_partitions,g2);		
		            ^
    (see http://t.uber.com/nullaway )
../original/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/graph/Util.java:34: error: [NullAway] passing @Nullable parameter 'g2_partitions' where @NonNull is required
		Matrix g2_normalised = normalise(g2_partitions,g2);
		                                 ^
    (see http://t.uber.com/nullaway )
../original/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/graph/Util.java:56: error: [NullAway] dereferenced expression g2_partitions is @Nullable
					BitSet g2_partition = g2_partitions.get(j);
					                                   ^
    (see http://t.uber.com/nullaway )
25 errors
